tests/NormalTests/paczka1/fuzzy1/34813350.err
Error in line 6: hdx A149 35,9
Error in line 28: 2yDOYAlk S403 76,30
Error in line 29: NCuajuW5 A149 45,1
Error in line 27: 2yDOYAlk S403 77,9
Error in line 32: NCuajuW5 S403 23,8
Error in line 33: 2yDOYAlk A149 39,1
